--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -89,8 +89,10 @@ section {
 .bg-tertiary-dark { background-color: $tertiary-dark; }
 .text-primary-text { color: $primary-text; }
 .text-secondary-text { color: $secondary-text; }
+.text-primary-dark { color: $primary-dark; }
 .text-accent-magenta { color: $accent-gold; }
 .text-accent-cyan { color: $accent-blue; }
+.text-accent-blue { color: $primary-dark; }
 .text-accent-gold { color: $accent-gold; }
 
 // Title gradient
